--- a/assets/html/dashboard-2fa-disable-done.njk
+++ b/assets/html/dashboard-2fa-disable-done.njk
@@ -67,7 +67,7 @@
                 <p class="cs--dashboard-form__result-text">2FA has been disabled on your account. You will no longer required to enter  Google Authenticator Code upon login.</p>
               </div>
               <div class="cs--dashboard-form__btn-group">
-                <button type="submit" class="cs--btn cs--btn-grad-blue ml-auto">Done</button>
+                <button type="submit" class="cs--btn cs--btn--grad-blue ml-auto">Done</button>
               </div>
             </form>
             {{ pageSide(side) }}
