--- a/assets/html/dashboard-2fa-disable.njk
+++ b/assets/html/dashboard-2fa-disable.njk
@@ -61,7 +61,7 @@
             <form class="cs--dashboard-form">
               <h2 class="cs--dashboard-form__title">2FA (2 Factor Authentication) is Enabled. We do not recommended disabling 2FA, howere if you need to do so for some reason, click “Disable”</h2>
               <div class="cs--dashboard-form__btn-group">
-                <button type="submit" class="cs--btn cs--btn-grad-blue">Disable</button>
+                <button type="submit" class="cs--btn cs--btn--grad-blue">Disable</button>
               </div>
             </form>
             {{ pageSide(side) }}
