--- a/assets/html/dashboard-2fa-step-1.njk
+++ b/assets/html/dashboard-2fa-step-1.njk
@@ -70,8 +70,8 @@
                 </a>
               </div>
               <div class="cs--dashboard-form__btn-group">
-                <button type="button" class="cs--btn cs--btn-transparent-grad-blue">Back</button>
-                <button type="submit" class="cs--btn cs--btn-grad-blue ml-auto">I have the App</button>
+                <button type="button" class="cs--btn cs--btn--transparent-grad-blue">Back</button>
+                <button type="submit" class="cs--btn cs--btn--grad-blue ml-auto">I have the App</button>
               </div>
             </form>
             {{ pageSide(side) }}
