--- a/assets/html/dashboard-2fa-step-2.njk
+++ b/assets/html/dashboard-2fa-step-2.njk
@@ -72,8 +72,8 @@
                 </div>
               </div>
               <div class="cs--dashboard-form__btn-group">
-                <button type="button" class="cs--btn cs--btn-transparent-grad-blue">Back</button>
-                <button type="submit" class="cs--btn cs--btn-grad-blue ml-auto">Next</button>
+                <button type="button" class="cs--btn cs--btn--transparent-grad-blue">Back</button>
+                <button type="submit" class="cs--btn cs--btn--grad-blue ml-auto">Next</button>
               </div>
             </form>
             {{ pageSide(side) }}
