--- a/assets/html/dashboard-2fa-step-3.njk
+++ b/assets/html/dashboard-2fa-step-3.njk
@@ -87,8 +87,8 @@
                 {{ dashInput(input) }}
               {% endfor %}
               <div class="cs--dashboard-form__btn-group">
-                <button type="button" class="cs--btn cs--btn-transparent-grad-blue">Back</button>
-                <button type="submit" class="cs--btn cs--btn-grad-blue ml-auto">Enable 2FA</button>
+                <button type="button" class="cs--btn cs--btn--transparent-grad-blue">Back</button>
+                <button type="submit" class="cs--btn cs--btn--grad-blue ml-auto">Enable 2FA</button>
               </div>
             </form>
             {{ pageSide(side) }}
