--- a/assets/html/dashboard-news-article.njk
+++ b/assets/html/dashboard-news-article.njk
@@ -96,8 +96,8 @@
                 <p>Nunc neque et amet vel magna vel. Donec mattis felis praesent gravida diam mauris, tristique. Est, sollicitudin dictum malesuada nisi imperdiet vivamus in quam tortor. Velit aliquet proin praesent enim tellus laoreet morbi vitae. Eleifend molestie scelerisque in fringilla massa neque fermentum est. Tortor euismod porttitor dolor lobortis a sed sed. Risus quam sed faucibus tempor sapien tincidunt. Vestibulum, diam cursus leo, mauris lectus ultricies lacinia. Id sit sodales in elit adipiscing diam et, iaculis eget. Eget scelerisque tincidunt molestie id consequat. Lectus morbi a amet senectus orci lectus vitae, aenean mauris. Hendrerit sed molestie dignissim et convallis vitae enim tempor. Morbi id etiam eget hendrerit velit lacus, amet elit amet. Sit nam porttitor volutpat ultricies egestas feugiat. Lectus ut porta eu fringilla morbi.</p>
               </div>
               <div class="cs--article__nav">
-                <a href="javascript:void(0)" class="cs--btn cs--btn-transparent-grad-blue">Previous</a>
-                <a href="javascript:void(0)" class="cs--btn cs--btn-grad-blue"><span>Next</span></a>
+                <a href="javascript:void(0)" class="cs--btn cs--btn--transparent-grad-blue">Previous</a>
+                <a href="javascript:void(0)" class="cs--btn cs--btn--grad-blue"><span>Next</span></a>
               </div>
             </article>
             {{ pageSide(side) }}
