--- a/assets/html/dashboard-support.njk
+++ b/assets/html/dashboard-support.njk
@@ -97,7 +97,7 @@
           <h1 class="cs--page__title">Support</h1>
           <p class="cs--page__sub-title">Attention! Cyptosystem never asks you to create cryptoicodes or any payments. Never send your info to scammers by email, Telegram or Twitter (we don’t have any support on Twitter)!  Cyptosystem supports never ask your money for solving problems or account activation. We don't have any private or special Invest Boxes. Beware of scams! You don’t need to verify you account! Don’t send your money to scammers!</p>
           <div class="cs--dashboard-form__btn-group">
-            <a href="javascript:void(0)" class="cs--btn cs--btn-grad-blue">Create New Ticket</a>
+            <a href="javascript:void(0)" class="cs--btn cs--btn--grad-blue">Create New Ticket</a>
           </div>
           <h2 class="cs--table__title">History</h2>
           {{ table(historyTable) }}
