--- a/assets/html/partials/sections/landing/acquaintance.njk
+++ b/assets/html/partials/sections/landing/acquaintance.njk
@@ -36,7 +36,7 @@
           <p>Enim feugiat libero mattis morbi. Pulvinar et, nunc, sed sit. Cum facilisi augue aliquet eu et tincidunt est lacus, felis. Commodo, ut aliquam amet pellentesque tortor. Convallis ac eget phasellus mauris eu sociis. Pharetra proin aliquam vulputate tellus augue. At cras dictum duis morbi odio lacus faucibus nisi. Hendrerit aliquet magna sit amet elementum aliquet.</p>
           <p>Donec aliquam hendrerit nam dolor, nulla eget. Et a pretium sit id metus amet, semper auctor duis. Dui leo molestie sed tortor nisl, ut urna. Enim est lorem velit dolor amet eu donec sed faucibus. Vestibulum sollicitudin tellus mauris orci augue. Tortor commodo dolor aliquet donec ut dictumst dignissim. Habitant faucibus nunc maecenas varius vel pulvinar nec.</p>
         </div>
-        <a href="javascript:void(0)" class="cs--btn cs--btn-grad-blue">Create Your Free Account</a>
+        <a href="javascript:void(0)" class="cs--btn cs--btn--grad-blue">Create Your Free Account</a>
       </div>
     </div>
   </div>
