--- a/assets/html/partials/sections/landing/bring-trading.njk
+++ b/assets/html/partials/sections/landing/bring-trading.njk
@@ -28,7 +28,7 @@
             <div class="cs--reg-form__input-icon">{{ icon('mail') }}</div>
             <input id="bring-trading-email" type="email" class="cs--reg-form__input" placeholder="Enter Your E-mail">
           </label>
-          <button type="submit" class="cs--btn cs--btn-grad-blue">Sign Up</button>
+          <button type="submit" class="cs--btn cs--btn--grad-blue">Sign Up</button>
         </form>
       </div>
     </div>
