--- a/assets/html/partials/sections/landing/hero.njk
+++ b/assets/html/partials/sections/landing/hero.njk
@@ -28,7 +28,7 @@
     <div class="cs--landing-hero__content">
       <h1 class="cs--landing-hero__title">A smarter way to trade and manage <span class="cs--landing-hero__title--accent">your crypto</span></h1>
       <p class="cs--landing-hero__comment">Professional platform to trade, automate strategies, and monitor your holdings - even offline wallets.</p>
-      <a href="javascript:void(0)" class="cs--btn cs--btn-grad-blue">Learn more</a>
+      <a href="javascript:void(0)" class="cs--btn cs--btn--grad-blue">Learn more</a>
     </div>
     <ul class="cs--landing-hero__counter">
       {% for counterItem in counterList %}
