--- a/assets/html/registration-auth.njk
+++ b/assets/html/registration-auth.njk
@@ -50,7 +50,7 @@
                 <input id="{{ input.name }}" type="{{ input.type }}" class="cs--reg-form__input" placeholder="{{ input.placeholder }}">
               </label>
             {% endfor %}
-            <button type="submit" class="cs--btn cs--btn-grad-blue">Confirm</button>
+            <button type="submit" class="cs--btn cs--btn--grad-blue">Confirm</button>
           </form>
           <div class="cs--form-support">Lost your <a href="javascript:void(0)">Google Authenticator Access?</a></div>
         </div>
