--- a/assets/html/registration-create-account.njk
+++ b/assets/html/registration-create-account.njk
@@ -81,7 +81,7 @@
               {# This img for example #}
               <img src="./img/examples/recaptcha.png" alt="">
             </div>
-            <button type="submit" class="cs--btn cs--btn-grad-blue">Create Account</button>
+            <button type="submit" class="cs--btn cs--btn--grad-blue">Create Account</button>
           </form>
           <div class="cs--form-support">Already have an account? <a href="registration-sing-in.html">Sign in</a></div>
         </div>
