--- a/assets/html/registration-forgot-pass.njk
+++ b/assets/html/registration-forgot-pass.njk
@@ -50,7 +50,7 @@
                 <input id="{{ input.name }}" type="{{ input.type }}" class="cs--reg-form__input" placeholder="{{ input.placeholder }}">
               </label>
             {% endfor %}
-            <button type="submit" class="cs--btn cs--btn-grad-blue">Reset password</button>
+            <button type="submit" class="cs--btn cs--btn--grad-blue">Reset password</button>
           </form>
         </div>
       </div>
