--- a/assets/html/registration-reset-auth-2.njk
+++ b/assets/html/registration-reset-auth-2.njk
@@ -47,7 +47,7 @@
             <p>If you had saved your 16-digit backup key for Google Authenticator when first setting it up on your phone, you can use this recover key to quickly restor youe Google Authenticator App, without requesting a manual reset of your account 2FA .</p>
             <p class="cs--page__content--accent"><b>Reseting your Google Authenticator is very manual and will often take over 2 days</b></p>
           </div>
-          <a href="javascript:void(0)" class="cs--btn cs--btn-grad-blue">Submit 2FA Reset Request</a>
+          <a href="javascript:void(0)" class="cs--btn cs--btn--grad-blue">Submit 2FA Reset Request</a>
         </div>
       </div>
     </main>
