--- a/assets/html/registration-reset-auth.njk
+++ b/assets/html/registration-reset-auth.njk
@@ -49,7 +49,7 @@
             </div>
             <p>Your request to reset 2 Factor Authentication has been submited to CryptoSystem Support. We will follow up with you within the next couple of days to validate account ownership and assist you further.</p>
           </div>
-          <a href="javascript:void(0)" class="cs--btn cs--btn-grad-blue">Back to Home</a>
+          <a href="javascript:void(0)" class="cs--btn cs--btn--grad-blue">Back to Home</a>
         </div>
       </div>
     </main>
