--- a/assets/html/registration-sing-in.njk
+++ b/assets/html/registration-sing-in.njk
@@ -56,7 +56,7 @@
                 <input id="{{ input.name }}" type="{{ input.type }}" class="cs--reg-form__input" placeholder="{{ input.placeholder }}">
               </label>
             {% endfor %}
-            <button type="submit" class="cs--btn cs--btn-grad-blue">Sing In</button>
+            <button type="submit" class="cs--btn cs--btn--grad-blue">Sing In</button>
           </form>
           <div class="cs--form-support">
             <p>
