--- a/assets/html/dashboard-2fa-disable-2.njk
+++ b/assets/html/dashboard-2fa-disable-2.njk
@@ -81,8 +81,8 @@
                 {{ dashInput(input) }}
               {% endfor %}
               <div class="cs--dashboard-form__btn-group">
-                <button type="button" class="cs--btn cs--btn-transparent-grad-blue">Back</button>
-                <button type="submit" class="cs--btn cs--btn-grad-blue ml-auto">Disable</button>
+                <button type="button" class="cs--btn cs--btn--transparent-grad-blue">Back</button>
+                <button type="submit" class="cs--btn cs--btn--grad-blue ml-auto">Disable</button>
               </div>
             </form>
             {{ pageSide(side) }}
