--- a/assets/html/dashboard-2fa-general.njk
+++ b/assets/html/dashboard-2fa-general.njk
@@ -61,7 +61,7 @@
             <form class="cs--dashboard-form">
               <h2 class="cs--dashboard-form__title">Enabling 2FA (2 Factor Authentication) is highly recommended. This adds an extra layer of security to your account in addition to your password.</h2>
               <div class="cs--dashboard-form__btn-group">
-                <button type="submit" class="cs--btn cs--btn-grad-blue">Enable</button>
+                <button type="submit" class="cs--btn cs--btn--grad-blue">Enable</button>
               </div>
             </form>
             {{ pageSide(side) }}
