--- a/assets/html/dashboard-2fa-step-4.njk
+++ b/assets/html/dashboard-2fa-step-4.njk
@@ -67,7 +67,7 @@
                 <p class="cs--dashboard-form__result-text">You will be required to enter the one time code generated  by Google Authenticator the next time you login.</p>
               </div>
               <div class="cs--dashboard-form__btn-group">
-                <button type="submit" class="cs--btn cs--btn-grad-blue ml-auto">Done</button>
+                <button type="submit" class="cs--btn cs--btn--grad-blue ml-auto">Done</button>
               </div>
             </form>
             {{ pageSide(side) }}
