--- a/assets/html/dashboard-connect.njk
+++ b/assets/html/dashboard-connect.njk
@@ -83,7 +83,7 @@
                 {{ dashInput(input) }}
               {% endfor %}
               <div class="cs--dashboard-form__btn-group">
-                <button type="submit" class="cs--btn cs--btn-grad-blue">Connect</button>
+                <button type="submit" class="cs--btn cs--btn--grad-blue">Connect</button>
               </div>
             </form>
             {{ pageSide(side) }}
