--- a/assets/html/dashboard-new-ticket.njk
+++ b/assets/html/dashboard-new-ticket.njk
@@ -62,7 +62,7 @@
                 {{ dashInput(input) }}
               {% endfor %}
               <div class="cs--dashboard-form__btn-group">
-                <button type="submit" class="cs--btn cs--btn-grad-blue">Create New Ticket</button>
+                <button type="submit" class="cs--btn cs--btn--grad-blue">Create New Ticket</button>
               </div>
             </form>
           </div>
