--- a/assets/html/dashboard-preferences.njk
+++ b/assets/html/dashboard-preferences.njk
@@ -102,7 +102,7 @@
               <h2 class="cs--dashboard-form__title">Preferred Currency</h2>
               {{ dashInput(inputCurrency) }}
               <div class="cs--dashboard-form__btn-group">
-                <button type="submit" class="cs--btn cs--btn-grad-blue">Save changes</button>
+                <button type="submit" class="cs--btn cs--btn--grad-blue">Save changes</button>
               </div>
             </form>
             {{ pageSide(side) }}
