--- a/assets/html/dashboard-select-exchange.njk
+++ b/assets/html/dashboard-select-exchange.njk
@@ -95,8 +95,8 @@
                     {% endfor %}
                   </ul>
                   <div class="cs--exchange-card__btn-group">
-                    <a href="javascript:void(0)" class="cs--btn cs--btn-grad-blue">Open</a>
-                    <a href="javascript:void(0)" class="cs--btn cs--btn-transparent-grad-blue">Connect</a>
+                    <a href="javascript:void(0)" class="cs--btn cs--btn--grad-blue">Open</a>
+                    <a href="javascript:void(0)" class="cs--btn cs--btn--transparent-grad-blue">Connect</a>
                   </div>
                 </div>
               </li>
