--- a/assets/html/dashboard-user-profile.njk
+++ b/assets/html/dashboard-user-profile.njk
@@ -137,7 +137,7 @@
                   {{ dashInput(input) }}
                 {% endfor %}
                 <div class="cs--dashboard-form__btn-group">
-                  <button type="submit" class="cs--btn cs--btn-grad-blue">Save changes</button>
+                  <button type="submit" class="cs--btn cs--btn--grad-blue">Save changes</button>
                 </div>
               <hr>
               <h2 class="cs--dashboard-form__title">Activity Log</h2>
