--- a/assets/html/partials/sections/dashboard-interface/my-orders.njk
+++ b/assets/html/partials/sections/dashboard-interface/my-orders.njk
@@ -146,6 +146,12 @@
 %}
 
 <section class="cs--interface__block cs--interface__block--my-orders">
-  <h2 class="cs--interface__block-title">My Orders</h2>
+  <div>
+    <h2 class="cs--interface__block-title">My Orders</h2>
+    <div class="cs--btn-group">
+      <button type="button" class="cs--btn cs--btn-tab">Open</button>
+      <button type="button" class="cs--btn cs--btn-tab">Filled</button>
+    </div>
+  </div>
   {{ table(downTable) }}
 </section>
