--- a/assets/html/partials/sections/landing/showreal.njk
+++ b/assets/html/partials/sections/landing/showreal.njk
@@ -9,7 +9,7 @@
           <img src="./img/btn-play.svg" alt="">
         </button> #}
       </div>
-      <a href="javascript:void(0)" class="cs--btn cs--btn-grad-blue">Create Your Free Account</a>
+      <a href="javascript:void(0)" class="cs--btn cs--btn--grad-blue">Create Your Free Account</a>
     </div>
   </div>
 </section>
