update block balance

--- a/assets/html/dashboard-new-ticket.njk
+++ b/assets/html/dashboard-new-ticket.njk
@@ -20,7 +20,7 @@
         'id': 'dashboard--email',
         'type': 'email',
         'placeholder': 'email@mail.com',
-        'valid': true
+        'class': 'cs--dashboard-form__input--success'
       }, {
         'title': 'Message type',
         'id': 'dashboard--msg-type',
