--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -20,6 +20,7 @@
 @import 'dropdown';
 @import 'color-theme';
 @import 'interface';
+@import 'balance-table';
 @import 'landing/header';
 @import 'landing/footer';
 @import 'dashboard/header';
