--- a/assets/scss/components/interface/interface.scss
+++ b/assets/scss/components/interface/interface.scss
@@ -4,7 +4,7 @@
     'order-book tools tools balance'
     'order-book tools tools balance'
     'trade-history  my-orders my-orders chat';
-  grid-template-rows: repeat(3,300px);
+  grid-template-rows: repeat(3, 300px);
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 30px;
   &__block {
@@ -14,12 +14,21 @@
     background-color: var(--color-blue-85);
     &--order-book {
       grid-area: order-book;
+      .cs--interface__block-title {
+        margin-bottom: 25px;
+      }
     }
     &--trade-history {
       grid-area: trade-history;
+      .cs--interface__block-title {
+        margin-bottom: 15px;
+      }
     }
     &--my-orders {
       grid-area: my-orders;
+      .cs--btn-group {
+        margin-left: auto;
+      }
     }
     &--chat {
       grid-area: chat;
@@ -28,13 +37,40 @@
     }
     &--balance {
       grid-area: balance;
+      .cs--interface__block-title {
+        margin-bottom: 15px;
+      }
+      .cs--balance-table {
+        margin-bottom: 35px;
+      }
+      .cs--btn-group {
+        margin-bottom: 10px;
+        .cs--btn {
+          flex-grow: 1;
+        }
+      }
+      form {
+        margin-top: 20px;
+        .cs--btn {
+          --btn-border-radius: 3px;
+          width: 100%;
+          padding: 10px;
+          margin-top: 15px;
+          font-size: 14px;
+        }
+      }
     }
     &--tools {
       grid-area: tools;
       background-color: transparent;
     }
+    &-head {
+      display: flex;
+      align-items: center;
+      margin-bottom: 10px;
+    }
     &-title {
-      margin-bottom: 20px;
+      margin-bottom: 0;
       font-weight: 700;
       font-size: 14px;
     }
@@ -52,6 +88,12 @@
       padding: var(--cell-padding-y) var(--cell-padding-x) calc(3 * var(--cell-padding-y));
       background-color: transparent;
       color: var(--color-grey);
+    }
+  }
+  .cs--btn-group {
+    .cs--btn {
+      padding: 6px 16px;
+      font-size: 11px;
     }
   }
 }
