--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -21,6 +21,7 @@
 @import 'color-theme';
 @import 'interface';
 @import 'balance-table';
+@import 'chat';
 @import 'landing/header';
 @import 'landing/footer';
 @import 'dashboard/header';
