--- a/assets/scss/pages/dashboard/interface.scss
+++ b/assets/scss/pages/dashboard/interface.scss
@@ -1,3 +1,12 @@
 .cs--dashboard--interface {
   padding: 40px 0 35px;
+  .cs--container {
+    padding: 0 45px 0 100px;
+    @include media('<xlg') {
+      padding: 0 var(--padding-sm);
+    }
+    @include media('<xs') {
+      padding: 0 var(--padding-xs);
+    }
+  }
 }
