--- a/assets/scss/components/table.scss
+++ b/assets/scss/components/table.scss
@@ -2,6 +2,7 @@
   overflow: auto;
   &::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
   }
   &::-webkit-scrollbar-thumb {
     border-radius: 5px;
