add section exchange

--- a/assets/html/dashboard-interface-login.njk
+++ b/assets/html/dashboard-interface-login.njk
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>CryptoSystem - Interface</title>
+    <title>CryptoSystem - Interface - Login</title>
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>₿</text></svg>"
@@ -23,7 +23,7 @@
             {% include './partials/sections/dashboard-interface/order-book.njk' %}
             {% include './partials/sections/dashboard-interface/trade-history.njk' %}
             {% include './partials/sections/dashboard-interface/my-orders.njk' %}
-            {% include './partials/sections/dashboard-interface/balance.njk' %}
+            {% include './partials/sections/dashboard-interface/exchange.njk' %}
             {% include './partials/sections/dashboard-interface/chat.njk' %}
           </div>
         </div>
