--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -102,6 +102,9 @@
       }, {
         'title': 'Interface',
         'href': 'dashboard-interface.html'
+      }, {
+        'title': 'Interface - login',
+        'href': 'dashboard-interface-login.html'
       }
     ]
   %}
