--- a/assets/scss/components/interface/interface.scss
+++ b/assets/scss/components/interface/interface.scss
@@ -35,7 +35,7 @@
         flex-wrap: wrap;
       }
       & > *:not(:last-child) {
-        margin-right: 20px;
+        margin-right: 15px;
       }
     }
     &-select {
@@ -74,6 +74,26 @@
     }
     &-stat {
       margin-top: 5px;
+    }
+  }
+  &__alert {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px 0 25px;
+    @include media('<xs') {
+      padding: 25px 0 25px;
+    }
+    &-title {
+      margin-top: 35px;
+      font-weight: 700;
+      font-size: 18px;
+      text-align: center;
+    }
+    &-text {
+      margin-top: 15px;
+      font-size: 13px;
+      text-align: center;
     }
   }
   &__break-point {
@@ -151,13 +171,12 @@
       margin-bottom: 35px;
     }
     .cs--btn-group {
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       .cs--btn {
         flex-grow: 1;
       }
     }
     form {
-      margin-top: 20px;
       .cs--dashboard-form__input {
         font-size: 12px;
       }
