update light theme

--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -76,7 +76,10 @@ $media-expressions: (
   --color-grey-50: hsl(0, 0%, 57%);
   --color-grey-70: hsl(0, 0%, 45%);
   --color-grey-80: hsl(0, 0%, 40%);
+  --color-grey-90: hsl(0, 0%, 19%);
   --color-grey-100: hsl(0, 0%, 13%);
+  --color-light-blue-10: hsl(228, 33%, 97%);
+  --color-light-blue-15: hsl(225, 10%, 92%);
   --color-light-blue-50: hsl(206, 78%, 78%);
   --color-blue: hsl(210, 100%, 60%);
   --color-blue-10: hsl(195, 100%, 49%);
@@ -91,6 +94,7 @@ $media-expressions: (
   --color-blue-90: hsl(220, 92%, 10%);
   --color-blue-100: hsl(222, 89%, 7%);
   --color-grey-blue-10: hsl(223, 21%, 28%);
+  --color-grey-blue-20: hsl(213, 24%, 36%);
   --color-grey-blue-50: hsl(220, 1%, 51%);
   --color-orange-30: hsl(25, 98%, 62%);
   --color-orange-50: hsl(22, 90%, 59%);
@@ -99,7 +103,7 @@ $media-expressions: (
   --color-green-60: hsl(175, 49%, 40%);
   --color-red: hsl(0, 83%, 70%);
   --color-yellow: hsl(43, 98%, 37%);
-  // --c: #081E4F;
+  --c: hsl(213, 24%, 36%);
 
   --grad-blue: linear-gradient(86.88deg, #00c6fb 1.95%, #005bea 97.83%);
   --grad-orange: linear-gradient(271.95deg, #fb7e37 14.29%, #ff9a44 98.96%);
