--- a/assets/scss/components/dashboard/form.scss
+++ b/assets/scss/components/dashboard/form.scss
@@ -72,7 +72,7 @@
     border: 1px solid var(--color-grey-blue-10);
     border-radius: 3px;
     background-color: transparent;
-    color: var(--color-white);
+    color: var(--base-text-color);
     font-size: 14px;
     @include animate(border);
     &:focus {
