--- a/assets/html/partials/sections/dashboard-interface/chat.njk
+++ b/assets/html/partials/sections/dashboard-interface/chat.njk
@@ -3,7 +3,7 @@
 <section class="cs--interface__block cs--interface__block--chat">
   <form class="cs--chat-wrapper">
     <div class="cs--interface__block-head">
-      <div>{{ icon('chat') }}</div>
+      <span class="cs--interface__block-head-icon">{{ icon('chat') }}</span>
       <h2 class="cs--interface__block-title">Chat</h2>
     </div>
     <output class="cs--chat-output">
