--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -22,6 +22,7 @@
 @import 'interface';
 @import 'balance-table';
 @import 'chat';
+@import 'favorite';
 @import 'landing/header';
 @import 'landing/footer';
 @import 'dashboard/header';
