--- a/assets/scss/components/interface/interface.scss
+++ b/assets/scss/components/interface/interface.scss
@@ -4,7 +4,7 @@
     'order-book tools tools balance'
     'order-book tools tools balance'
     'trade-history my-orders my-orders chat';
-  grid-template-rows: repeat(3, 300px);
+  grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 30px;
   @include media('<xlg') {
@@ -22,6 +22,73 @@
   @include media('<sm') {
     display: block;
   }
+  &__dropdown {
+    position: relative;
+    @include media('<sm') {
+      width: 100%;
+      margin-bottom: 10px;
+    }
+    &-btn {
+      position: relative;
+      z-index: 2;
+      &.cs--dashboard-form__input {
+        display: flex;
+        align-items: center;
+        border-color: var(--color-light-blue-50);
+        cursor: pointer;
+        @include media('<xs') {
+          flex-wrap: wrap;
+        }
+        & > *:not(:last-child) {
+          margin-right: 10px;
+        }
+      }
+    }
+    &-content {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      width: 250%;
+      padding-top: 65px;
+      border: 1px solid var(--color-blue-50);
+      border-radius: 5px;
+      background: var(--color-blue-85);
+      box-shadow: 0px 0px 40px rgba(15, 46, 105, 0.7);
+      @include media('<sm') {
+        width: 100%;
+      }
+      .cs--card-filter__form {
+        grid-template-columns: 1fr;
+        padding: 0 15px 15px;
+      }
+      .cs--dashboard-form__input--search-wrapper {
+        width: 100%;
+      }
+      .cs--table-wrapper {
+        tr {
+          @include animate(background-color);
+          @include media('hover') {
+            &:hover {
+              background-color: var(--color-blue-60);
+            }
+          }
+          & > td {
+            &:first-child {
+              padding-left: 15px;
+            }
+            &:last-child {
+              padding-right: 15px;
+            }
+          }
+        }
+      }
+      .cs--table__cell--chart {
+        min-width: 80px;
+        max-width: 80px;
+      }
+    }
+  }
   &__chart {
     // for example
     & > img {
@@ -36,34 +103,6 @@
       }
       & > *:not(:last-child) {
         margin-right: 15px;
-      }
-    }
-    &-select {
-      display: flex;
-      align-items: center;
-      padding: 15px 20px;
-      border: 1px solid var(--color-light-blue-50);
-      border-radius: 3px;
-      @include media('<sm') {
-        width: 100%;
-        margin-bottom: 10px;
-      }
-      @include media('<xs') {
-        flex-wrap: wrap;
-      }
-      & > *:not(:last-child) {
-        margin-right: 10px;
-      }
-      .cs--dashboard-form__item {
-        margin-left: auto;
-        @include media('<xs') {
-          width: 100%;
-          margin-top: 10px;
-        }
-      }
-      .cs--dashboard-form__input {
-        padding: 10px calc(2 * var(--side-padding)) 10px var(--side-padding);
-        border: transparent;
       }
     }
     &-comment {
@@ -153,13 +192,14 @@
     box-shadow: 10px 0px 4px rgba(14, 17, 41, 0.25);
     .cs--interface__block-head {
       margin-bottom: 0;
+      &-icon {
+        display: flex;
+        width: 20px;
+        height: 20px;
+      }
     }
     .cs--interface__block-title {
       margin-left: 10px;
-    }
-    .cs--btn {
-      padding: 12px 14px;
-      border-radius: 3px;
     }
   }
   &--balance {
